<resources>
    <string name="app_name">Weather App</string>

    <!-- Main screen -->
    <string name="weather_app_title">Weather App</string>
    <string name="btn_refresh_description">Atualizar dados</string>
    <string name="updating_data">Atualizando dados&#8230;</string>
    <string name="search_hint">Buscar cidade&#8230;</string>
    <string name="add_city">Adicionar cidade</string>

    <!-- Weather list item -->
    <string name="temp_current_label">Temp. atual: %s</string>
    <string name="temp_max_label">Temp. m\u00e1x: %s</string>
    <string name="temp_min_label">Temp. m\u00edn: %s</string>
    <string name="pressure_label">Press\u00e3o: %shPa</string>
    <string name="humidity_label">Umidade: %s%%</string>

    <!-- Detail screen -->
    <string name="temperature_section">Temperatura</string>
    <string name="feels_like_label">Sensa\u00e7\u00e3o t\u00e9rmica</string>
    <string name="temp_max_section">M\u00e1xima</string>
    <string name="temp_min_section">M\u00ednima</string>
    <string name="atmosphere_section">Atmosfera</string>
    <string name="pressure_section">Press\u00e3o</string>
    <string name="humidity_section">Umidade</string>
    <string name="wind_section">Vento</string>
    <string name="wind_speed_label">Velocidade</string>
    <string name="wind_direction_label">Dire\u00e7\u00e3o</string>
    <string name="forecast_section">Previs\u00e3o 5 dias</string>
    <string name="no_description">\u2014</string>

    <!-- Error states -->
    <string name="error_no_internet">Sem conex\u00e3o com a internet</string>
    <string name="error_loading">Erro ao carregar dados</string>
    <string name="error_city_not_found">Cidade n\u00e3o encontrada</string>
    <string name="loading">Carregando&#8230;</string>
    <string name="retry">Tentar novamente</string>
    <string name="empty_list">Nenhuma cidade adicionada.\nToque em + para buscar uma cidade.</string>

    <!-- Search -->
    <string name="search_city_title">Buscar Cidade</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Adicionar</string>
    <string name="city_already_added">Cidade j\u00e1 adicionada</string>
    <string name="city_added">%s adicionada!</string>
</resources>
